<resources>
    <string name="app_name">Movies App</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_search">Hi,what\'s next?</string>
    <string name="popular">POPULAR</string>
    <string name="see_more">See more...</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="animation">Animation</string>
    <string name="comedy">Comedy</string>
    <string name="crime">Crime</string>
    <string name="documentary">Documentary</string>
    <string name="drama">Drama</string>
    <string name="family">Family</string>
    <string name="fantasy">Fantasy</string>
    <string name="history">History</string>
    <string name="horror">Horror</string>
    <string name="music">Music</string>
    <string name="mystery">Mystery</string>
    <string name="romance">Romance</string>
    <string name="science_fiction">Science Fiction</string>
    <string name="tv_movie">Tv Movie</string>
    <string name="thriller">Thriller</string>
    <string name="war">War</string>
    <string name="western">Western</string>

    <array name="tabs">
        <item>Movies</item>
        <item>Tv Shows</item>
    </array>
</resources>
