<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:chipSpacing="10dp"
        app:singleLine="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/action" />

        <com.google.android.material.chip.Chip
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/adventure" />

        <com.google.android.material.chip.Chip
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/animation" />

        <com.google.android.material.chip.Chip
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/comedy" />

        <com.google.android.material.chip.Chip
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/crime" />

        <com.google.android.material.chip.Chip
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/documentary" />

        <com.google.android.material.chip.Chip
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/drama" />

        <com.google.android.material.chip.Chip
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/family" />

        <com.google.android.material.chip.Chip
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/fantasy" />

        <com.google.android.material.chip.Chip
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/history" />

        <com.google.android.material.chip.Chip
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/horror" />

        <com.google.android.material.chip.Chip
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/music" />

        <com.google.android.material.chip.Chip
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/mystery" />

        <com.google.android.material.chip.Chip
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/romance" />

        <com.google.android.material.chip.Chip
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/science_fiction" />

        <com.google.android.material.chip.Chip
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/tv_movie" />

        <com.google.android.material.chip.Chip
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/thriller" />

        <com.google.android.material.chip.Chip
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/war" />

        <com.google.android.material.chip.Chip
            style="@style/CustomChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/western" />

    </com.google.android.material.chip.ChipGroup>

</HorizontalScrollView>